--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/adapters/layout/constellate_fortune_desc_item.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/adapters/layout/constellate_fortune_desc_item.xml
@@ -14,7 +14,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +33,9 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="50dp"
             android:layout_marginTop="10dp"
-            android:textSize="26sp"
-            android:textColor="#333333"/>
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/constellate_tv_fortune_type_name_text_color"/>
 
         <com.knight.kotlin.library_widget.StarBar
             android:id="@+id/fortune_star_bar"
@@ -47,7 +48,7 @@
             app:star_height="25dp"
             app:star_max="5"
             app:star_orientation="star_horizontal"
-
+            app:star_interval_width="6dp"
             app:star_width="25dp"/>
 
 
@@ -59,6 +60,11 @@
             app:layout_constraintTop_toBottomOf="@id/tv_fortune_type_name"
             app:layout_constraintStart_toStartOf="@id/tv_fortune_type_name"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:lineSpacingExtra="6dp"
+            android:layout_marginTop="@dimen/constellate_tv_fortune_desc_margin_top"
+            android:layout_marginBottom="@dimen/constellate_tv_fortune_desc_margin_bottom"
+            android:textColor="@color/constellate_tv_fortune_desc_text_color"
             tools:text="这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述这是描述"/>
 
 
