--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/fragments/layout/constellate_today_fortune_fragment.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/fragments/layout/constellate_today_fortune_fragment.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+>
 
 
     <com.yanzhenjie.recyclerview.SwipeRecyclerView
@@ -11,7 +12,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+       />
 
 
     <LinearLayout
@@ -304,5 +306,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rv_constellate_type_value" />
+        app:layout_constraintTop_toBottomOf="@id/rv_constellate_type_value"
+        android:background="@color/base_activity_bg"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
