--- a/nowinandroid/feature/module_constellate/src/main/res/values-night/colors.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values-night/colors.xml
@@ -4,4 +4,6 @@
     <color name="constellate_bottom_tv_date_text_color">#999999</color>
     <color name="constellate_today_title_text_color">#D3D3D3</color>
     <color name="constellate_fortune_type_text_color">#666666</color>
+    <color name="constellate_tv_fortune_type_name_text_color">#D3D3D3</color>
+    <color name="constellate_tv_fortune_desc_text_color">#D3D3D3</color>
 </resources>
