--- a/nowinandroid/feature/module_constellate/src/main/res/values/colors.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
    <color name="constellate_fortune_type_text_color">#666666</color>
    <color name="constellate_tv_fortune_type_name_text_color">#333333</color>
    <color name="constellate_tv_fortune_desc_text_color">#333333</color>
+   <color name="constellate_tv_first_time_text_color">#555555</color>
+   <color name="constellate_tv_end_time_text_color">#555555</color>
   </resources>
