--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/fragments/layout/constellate_today_fortune_fragment.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/fragments/layout/constellate_today_fortune_fragment.xml
@@ -28,6 +28,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/rl_lucky_color"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -73,6 +74,7 @@
 
 
         <RelativeLayout
+            android:id="@+id/rl_lucky_number"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -116,6 +118,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/rl_lucky_star"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
