--- a/nowinandroid/feature/module_constellate/src/main/res/values-night/colors.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values-night/colors.xml
@@ -6,4 +6,6 @@
     <color name="constellate_fortune_type_text_color">#666666</color>
     <color name="constellate_tv_fortune_type_name_text_color">#D3D3D3</color>
     <color name="constellate_tv_fortune_desc_text_color">#D3D3D3</color>
+    <color name="constellate_tv_first_time_text_color">#D3D3D3</color>
+    <color name="constellate_tv_end_time_text_color">#D3D3D3</color>
 </resources>
