--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/adapters/layout/constellate_fortune_desc_item.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/adapters/layout/constellate_fortune_desc_item.xml
@@ -60,8 +60,8 @@
             app:layout_constraintTop_toBottomOf="@id/tv_fortune_type_name"
             app:layout_constraintStart_toStartOf="@id/tv_fortune_type_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:lineSpacingExtra="6dp"
+            android:text="sdsd"
             android:layout_marginTop="@dimen/constellate_tv_fortune_desc_margin_top"
             android:layout_marginBottom="@dimen/constellate_tv_fortune_desc_margin_bottom"
             android:textColor="@color/constellate_tv_fortune_desc_text_color"
@@ -74,10 +74,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_fortune_type_name"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_fortune_desc"
             android:layout_marginTop="10dp"
-            android:visibility="gone"/>
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
