--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/adapters/layout/constellate_week_item.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/adapters/layout/constellate_week_item.xml
@@ -26,9 +26,7 @@
         android:background="@drawable/constellate_week_normal_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="2dp"
-        android:layout_marginEnd="2dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
