解决星座暗黑模式问题 优化切换viewpager2高度不一致问题

--- a/nowinandroid/feature/module_constellate/src/main/res/layouts/activitys/layout/constellate_fortune_activity.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/layouts/activitys/layout/constellate_fortune_activity.xml
@@ -120,7 +120,7 @@
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rl_change_constellate"
                    android:layout_centerHorizontal="true"
-                   android:textColor="#555555"
+                   android:textColor="@color/constellate_tv_shortcomment_text_color"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_marginTop="20dp"/>
@@ -180,13 +180,13 @@
 
                <com.knight.kotlin.library_widget.NestedScrollableHost
                    android:layout_width="match_parent"
-                   android:layout_height="match_parent"
+                   android:layout_height="wrap_content"
                    android:layout_below="@id/view_line"
                    android:layout_marginTop="10dp">
                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/constellate_viewPager"
                        android:layout_width="match_parent"
-                       android:layout_height="match_parent" />
+                       android:layout_height="wrap_content" />
                </com.knight.kotlin.library_widget.NestedScrollableHost>
 
 
