--- a/nowinandroid/feature/module_home/src/main/res/layouts/items/layout/home_include_toolbar.xml
+++ b/nowinandroid/feature/module_home/src/main/res/layouts/items/layout/home_include_toolbar.xml
@@ -8,29 +8,13 @@
     android:background="@color/home_toolbar_color"
     android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
     app:layout_scrollFlags="scroll|enterAlways"
+
     app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-<!--        每日箴言-->
-<!--        https://apis.juhe.cn/fapig/soup/query?key=35a99dbd7e83a0c58aab5a4329ba52fb -->
-<!--        <com.knight.kotlin.library_widget.MarqueeTextView-->
-<!--            android:id="@+id/home_tv_loginname"-->
-<!--            android:layout_width="40dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_centerVertical="true"-->
-<!--            android:layout_marginLeft="@dimen/base_dimen_6"-->
-<!--            android:ellipsize="marquee"-->
-<!--            android:focusable="true"-->
-<!--            android:focusableInTouchMode="true"-->
-<!--            android:gravity="center"-->
-<!--            android:marqueeRepeatLimit="marquee_forever"-->
-<!--            android:scrollHorizontally="true"-->
-<!--            android:singleLine="true"-->
-<!--            android:text="@string/home_tv_login"-->
-<!--            android:textColor="@color/home_login_tv_color"-->
-<!--            tools:ignore="SpUsage" />-->
+
 
         <ImageView
             android:id="@+id/home_iv_more_menu"
@@ -111,5 +95,5 @@
 
     </RelativeLayout>
 
-
+<!--    @drawable/home_holiday_test-->
 </com.knight.kotlin.library_widget.CompatToolBar>
