--- a/nowinandroid/feature/module_eye_recommend/src/main/res/values/dimens.xml
+++ b/nowinandroid/feature/module_eye_recommend/src/main/res/values/dimens.xml
@@ -8,4 +8,17 @@
     <dimen name="eye_recommend_video_item_tv_title_margin_start">10dp</dimen>
     <dimen name="eye_recommend_video_item_tv_title_margin_top">10dp</dimen>
     <dimen name="eye_recommend_video_item_tv_title_text_size">14sp</dimen>
+    <dimen name="eye_recommend_video_item_tv_desc_margin_start">10dp</dimen>
+    <dimen name="eye_recommend_video_item_tv_desc_margin_top">20dp</dimen>
+    <dimen name="eye_recommend_video_item_tv_desc_text_size">12sp</dimen>
+    <dimen name="eye_recommend_video_item_tv_time_drawable_padding">5dp</dimen>
+    <dimen name="eye_recommend_video_item_tv_time_margin_start">10dp</dimen>
+    <dimen name="eye_recommend_video_tv_share_margin_end">10dp</dimen>
+    <dimen name="eye_recommend_video_category_margin_left">5dp</dimen>
+    <dimen name="eye_recommend_small_video_card_mb_time_width">38dp</dimen>
+    <dimen name="eye_recommend_small_video_card_mb_time_height">20dp</dimen>
+    <dimen name="eye_recommend_small_video_card_mb_time_margin_end">5dp</dimen>
+    <dimen name="eye_recommend_small_video_card_mb_time_margin_bottom">5dp</dimen>
+    <dimen name="eye_recommend_small_video_card_mb_time_text_size">10sp</dimen>
+    <dimen name="eye_recommend_small_video_card_mb_time_corner_radius">5dp</dimen>
 </resources>
