--- a/nowinandroid/feature/module_eye_recommend/src/main/res/layouts/adapters/layout/eye_recommend_small_video_item.xml
+++ b/nowinandroid/feature/module_eye_recommend/src/main/res/layouts/adapters/layout/eye_recommend_small_video_item.xml
@@ -33,6 +33,17 @@
             />
 
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/iv_eye_recommend_small_video_cover"
+            android:background="@drawable/eye_recommend_video_home_play_icon"
+            app:layout_constraintBottom_toBottomOf="@id/iv_eye_recommend_small_video_cover"
+            app:layout_constraintLeft_toLeftOf="@id/iv_eye_recommend_small_video_cover"
+            app:layout_constraintRight_toRightOf="@id/iv_eye_recommend_small_video_cover"/>
+
+
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/mb_eye_recommend_small_video_time"
             android:theme="@style/Theme.MaterialComponents.NoActionBar"
