完善开眼视频布局(100%)

--- a/nowinandroid/core/library_video/src/main/res/layout/vi_layout_std.xml
+++ b/nowinandroid/core/library_video/src/main/res/layout/vi_layout_std.xml
@@ -181,6 +181,7 @@
         android:layout_height="@dimen/vi_start_button_w_h_normal"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:indeterminate="true"
         android:indeterminateDrawable="@drawable/vi_loading"
         android:visibility="invisible" />
 
