--- a/nowinandroid/feature/module_eye_video_detail/src/main/res/layouts/activitys/layout/eye_video_detail_activity.xml
+++ b/nowinandroid/feature/module_eye_video_detail/src/main/res/layouts/activitys/layout/eye_video_detail_activity.xml
@@ -7,9 +7,9 @@
 
     <data>
 
-        <variable
-            name="videoEntity"
-            type="com.knight.kotlin.library_base.entity.EyeVideoDetailEntity" />
+<!--        <variable-->
+<!--            name="videoEntity"-->
+<!--            type="com.knight.kotlin.library_base.entity.EyeVideoDetailEntity" />-->
 
 
 
