--- a/nowinandroid/feature/module_video/src/main/res/layouts/activitys/layout/video_playview.xml
+++ b/nowinandroid/feature/module_video/src/main/res/layouts/activitys/layout/video_playview.xml
@@ -7,7 +7,7 @@
 
 
 
-    <com.google.android.exoplayer2.ui.PlayerView
+    <androidx.media3.ui.PlayerView
         android:id="@+id/playerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
