升级版本 修改问题 还差星座和R8问题

--- a/nowinandroid/feature/module_eye_daily/src/main/res/layouts/adapters/layout/eye_daily_image_item.xml
+++ b/nowinandroid/feature/module_eye_daily/src/main/res/layouts/adapters/layout/eye_daily_image_item.xml
@@ -31,7 +31,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
                 android:transitionName="@string/base_daily_share_image"
-                bind:imageUrl="@{model.data.component9().feed}"/>
+                bind:imageUrl="@{model.data.cover == null ? @string/eye_daily_default_cover : model.data.cover.feed}"/>
 
 
             <TextView
